# SimpleFOC-ESP-IDF

./: .gitignore  README.md
example/basic_walkthrough/: Makefile
example/basic_walkthrough/components/SimpleFOC-IDF/: BLDCMotor.h  CMakeLists.txt  StepperMotor.h
example/basic_walkthrough/components/SimpleFOC-IDF/common/: foc_utils.h  time_utils.cpp  time_utils.h
example/basic_walkthrough/components/SimpleFOC-IDF/common/base_classes/: BLDCDriver.h  FOCMotor.cpp  FOCMotor.h
example/basic_walkthrough/components/SimpleFOC-IDF/communication/: Commander.h  SimpleFOCDebug.cpp  SimpleFOCDebug.h  StepDirListener.h
example/basic_walkthrough/components/SimpleFOC-IDF/current_sense/: GenericCurrentSense.h  InlineCurrentSense.h  LowsideCurrentSense.h
example/basic_walkthrough/components/SimpleFOC-IDF/sensors/: Encoder.h  GenericSensor.h  HallSensor.h  MagneticSensorAnalog.h  MagneticSensorI2C.h  MagneticSensorPWM.h  MagneticSensorSPI.h
example/basic_walkthrough/components/SimpleFOC-IDF/trans_assist/: idf_gpio.cpp  idf_gpio.h  idf_serial.cpp  idf_serial.h
example/basic_walkthrough/main/: main.c  main.cpp
